# bpm2fps

./: LICENSE  README.md  bpm2fps.py  bpm2fps.sh  pyproject.toml  setup.py
.github/workflows/: lint-then-test.yml
bpm2fps/: __init__.py  __main__.py  app.qml  cli.py  gui.py  usd.py
examples/: example.blend  example.csv  example.json  test.usd
flatpak/: io.github.breadmakesyoufull.bpm2fps.desktop  io.github.breadmakesyoufull.bpm2fps.metainfo.xml  io.github.breadmakesyoufull.bpm2fps.yaml
