[project]
name = "bpm2fps"
version = "1.0.0"
authors = [
  {name="BreadMakesYouFull"},
]
description = "Convert beats per minute to animation frames."
readme = "README.md"
requires-python = ">=3.5"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/breadmakesyoufull/bpm2fps"

[project.scripts]
bpm2fps = "bpm2fps.cli:main"
